--- a/index.html
+++ b/index.html
@@ -157,28 +157,44 @@
                         <a href="https://the-greenmarket.herokuapp.com/">Live</a> | <a href="https://github.com/internetmara/GreenMarket">GitHub</a>
                         <h3>Green Market</h3>
                         <h6>Mongo DB, Express, React.js, Redux.js, Node, Webpack, Amazon AWS S3, Google Maps API</h6>
+                        <i>An online directory that allows users to browse, purchase and locate local goods and services.</i>
                         <br/>
-                        <ul>
-                            <li>Products and services appear on an interactive map of nodes</li>
-                            <li>User's products & services data are saved to the database</li>
-                            <li>Offers a show page with information about a sellers’ products and/or services</li>
-                        </ul>
                         <br/>
-                        <p class="definition"><i>An online directory that allows users to browse, purchase and locate local goods and services.</i></p>
+                        <div class="proj">
+                            <ul>
+                                <br/>
+                                <br/>
+                                <li>Products and services appear on an interactive map of nodes</li>
+                                <br/>
+                                <li>User's products & services data are saved to the database</li>
+                                <br/>
+                                <li>Offers a show page with information about a sellers’ products and/or services</li>
+                            </ul>
+                            <img class="demo-pic" src="assets/img/greenmarket.png"/>
+                        </div>
+                        <br/>
                         <div class="line"/>
 
                         <br/>
                         <a href="https://hash-maps.herokuapp.com/#/">Live</a> | <a href="https://github.com/internetmara/HashMaps">GitHub</a>
                         <h3>Hash Maps</h3>
                         <h6>Ruby, Rails, React.js/Redux.js, PostgresSQL, Webpack, Amazon AWS S3, Google Maps API</h6>
+                        <i>HashMaps, a Weedmaps clone, is an online directory that allows users to browse, purchase and locate cannabis dispensaries and products.</i>
                         <br />
-                        <ul>
-                            <li>Maps the location of local dispensaries using the Google Maps API platform</li>
-                            <li>Allows the user to view products and dispensaries</li>
-                            <li>Users can add items to a cart</li>
-                        </ul>
                         <br/>
-                        <p class="definition"><i>HashMaps, a Weedmaps clone, is an online directory that allows users to browse, purchase and locate cannabis dispensaries and products.</i></p>
+                        <div class="proj">
+                            <ul>
+                                <br/>
+                                <br/>
+                                <li>Maps the location of local dispensaries using the Google Maps API platform</li>
+                                <br/>
+                                <li>Allows the user to view products and dispensaries</li>
+                                <br/>
+                                <li>Users can add items to a cart</li>
+                            </ul>
+                            <img class="demo-pic" src="assets/img/hashmaps.png"/>
+                        </div>
+                        <br/>
                         <div class="line" />
 
                         <br />
