--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Projects`</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Projects</a></li>
                 </ul>
             </div>
         </nav>
@@ -201,14 +201,20 @@
                         <a href="https://internetmara.github.io/DND/about.html">Live</a> | <a href="https://github.com/internetmara/DND">GitHub</a>
                         <h3>DND Generator</h3>
                         <h6>JavaScript, Webpack, HTML, CSS</h6>
+                        <i>Randomly generates Non-Player Characters (NPCs), environments, monsters to encounter, locations to frequent and magic items for the fantasy tabletop role-playing game Dungeons & Dragons</i>
                         <br />
-                        <ul>
-                            <li>Pulls from an API to provide statistics and information on Monsters and Magic Items</li>
-                            <li>Allows the user to choose a category and environment to randomly generate</li>
-                        </ul>
+                        <br/>
+                        <div class="proj">
+                            <ul>
+                                <br/>
+                                <br/>
+                                <li>Pulls from an API to provide statistics and information on Monsters and Magic Items</li>
+                                <br/>
+                                <li>Allows the user to choose a category and environment to randomly generate</li>
+                            </ul>
+                            <img class="demo-pic" src="assets/img/dnd.png"/>
+                        </div>
                         <br />
-                        <p class="definition"><i>Randomly generates Non-Player Characters (NPCs), environments, monsters to encounter, locations to frequent and magic
-                        items for the fantasy tabletop role-playing game Dungeons & Dragons</i></p>
                         <div class="line" />
                     </ul>
                 </div>
