--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">App Academy</h3>
                             <div class="subheading mb-3">Software Engineering</div>
+                            <p>Successfully finished the curriculum at App Academy, a highly selective and immersive Software Engineering bootcamp in which I spent over 100 hours per week enhancing my skills and exposing myself to a myriad of cutting-edge technologies.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2021 - August 2021</span></div>
                     </div>
