--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                         <span class="text-primary">Finkel</span>
                     </h1>
                     <div class="subheading mb-5">
-                        2710 Clay Street · Alameda, CA 94501 · (510) 388-9221 ·
+                        Alameda, CA · (510) 388-9221
                         <a href="mailto:ms.marafinkel@gmail.com">ms.marafinkel@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a Software Engineer, beach bum, dog mom, and D&D dungeon master with experience in JavaScript, React, MongoDb, ExpressJs, Ruby, HTML & CSS, and Rails.</p>
+                    <p class="lead mb-5">I am a Software Engineer, beach bum, dog mom, and D&D player with experience in JavaScript, React, MongoDb, ExpressJs, Ruby, HTML & CSS, and Rails.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="http://www.linkedin.com/in/marafinkel"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/internetmara"><i class="fab fa-github"></i></a>
