--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <span class="text-primary">Finkel</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Alameda, CA · (510) 388-9221
+                        Alameda, CA · (510) 388-9221 · 
                         <a href="mailto:ms.marafinkel@gmail.com">ms.marafinkel@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am a Software Engineer, beach bum, dog mom, and D&D player with experience in JavaScript, React, MongoDb, ExpressJs, Ruby, HTML & CSS, and Rails.</p>
