--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <meta name="description" content="Mara Finkel Personal Site" />
+        <meta name="title" property="og:title" content="Mara Finkel Personal Site" />
+        <meta property="og:type" content="Website" />
+        <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51593100859_ac02b9b424_k.jpg" alt="mara finkel personal site" />
+        <meta name="description" property="og:description" content="I am a Software Engineer, beach bum, dog mom, and D&D player with experience in JavaScript, React, MongoDb, ExpressJs, Ruby, HTML & CSS, and Rails." />
+        <meta name="author" content="Mara Finkel" />
+
     </head>
     <body id="page-top">
         <!-- Navigation-->
