Change meta  description

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
         <meta name="title" property="og:title" content="Mara Finkel Personal Site" />
         <meta property="og:type" content="Website" />
         <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51593100859_ac02b9b424_k.jpg" alt="mara finkel personal site" />
-        <meta name="description" property="og:description" content="I am a Software Engineer, beach bum, dog mom, and D&D player with experience in JavaScript, React, MongoDb, ExpressJs, Ruby, HTML & CSS, and Rails." />
+        <meta name="description" property="og:description" content="I am a Software Engineer with experience building web applications using React, Redux, Javascript, Ruby on Rails, AWS, Node.js, Express.js, MongoDB, and SQL.
+
+I have recently finished my curriculum at App Academy, a highly selective and immersive Software Engineering Bootcamp in San Francisco, where I spent 100+ hour weeks learning and developing my skills.
+
+When I'm not coding, I like to read graphic novels, create art, and play D&D with my friends. I've found passion in coding and I'm currently trying to learn Python outside of the curriculum I learned from App Academy." />
         <meta name="author" content="Mara Finkel" />
 
     </head>
