--- a/index.html
+++ b/index.html
@@ -57,9 +57,12 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
                     </h1>
                     <div class="subheading mb-5">
                         Alameda, CA · (510) 388-9221 · 
-                        <a href="mailto:ms.marafinkel@gmail.com">ms.marafinkel@gmail.com</a>
+                        <a href="mailto:ms.marafinkel@gmail.com">ms.marafinkel@gmail.com</a> ·
+                        <a href="assets/img/MaraFinkelResume.pdf">Resume</a>
                     </div>
                     <p class="lead mb-5">I am a Software Engineer, beach bum, dog mom, and D&D player with experience in JavaScript, React, MongoDb, ExpressJs, Ruby, HTML & CSS, and Rails.</p>
+                    
+                    <br />
                     <div class="social-icons">
                         <a class="social-icon" href="http://www.linkedin.com/in/marafinkel"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/internetmara"><i class="fab fa-github"></i></a>
@@ -132,6 +135,7 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2018 - January 2020</span></div>
                     </div>
+                    <h3 align="center"><a href="assets/img/MaraFinkelResume.pdf">Resume</a></h3>
                 </div>
             </section>
             <hr class="m-0" />
@@ -158,6 +162,8 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
                     <img class="jellypic" src="assets/img/jelly.png"/>
                     <br/>
                     <p class="mb-0">In addition to this, I am an experienced Operations Trainer, activist, and educator with a demonstrated history of working in the alternative medicine industry while complying with the complex and disparate regulations applicable to the cannabis industry.</p>
+                    <br />
+                    <h3 align="center"><a href="assets/img/MaraFinkelResume.pdf">Resume</a></h3>
                 </div>
             </section>
             <hr class="m-0" />
