--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
                     <div class="subheading mb-5">
                         Alameda, CA · (510) 388-9221 · 
                         <a href="mailto:ms.marafinkel@gmail.com">ms.marafinkel@gmail.com</a> ·
-                        <a href="assets/img/MaraFinkelResume.pdf">Resume</a>
+                        <a href="assets/img/MaraFinkelResume.pdf" target="_blank">Resume</a>
                     </div>
                     <p class="lead mb-5">I am a Software Engineer, beach bum, dog mom, and D&D player with experience in JavaScript, React, MongoDB, ExpressJs, Ruby, HTML & CSS, and Rails.</p>
                     
