--- a/index.html
+++ b/index.html
@@ -57,17 +57,16 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
                     </h1>
                     <div class="subheading mb-5">
                         Alameda, CA · (510) 388-9221 · 
-                        <a href="mailto:ms.marafinkel@gmail.com">ms.marafinkel@gmail.com</a> ·
+                        <a href="mailto:ms.marafinkel@gmail.com" target="_blank">ms.marafinkel@gmail.com</a> ·
                         <a href="assets/img/MaraFinkelResume.pdf" target="_blank">Resume</a>
                     </div>
                     <p class="lead mb-5">I am a Software Engineer, beach bum, dog mom, and D&D player with experience in JavaScript, React, MongoDB, ExpressJs, Ruby, HTML & CSS, and Rails.</p>
                     
                     <br />
                     <div class="social-icons">
-                        <a class="social-icon" href="http://www.linkedin.com/in/marafinkel"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/internetmara"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://angel.co/u/mara-finkel"><i class="fab fa-angellist"></i></a>
-                        <!-- <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a> -->
+                        <a class="social-icon" href="http://www.linkedin.com/in/marafinkel" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/internetmara" target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://angel.co/u/mara-finkel" target="_blank"><i class="fab fa-angellist"></i></a>
                     </div>
                 </div>
             </section>
@@ -135,7 +134,7 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2018 - January 2020</span></div>
                     </div>
-                    <h3 align="center"><a href="assets/img/MaraFinkelResume.pdf">Resume</a></h3>
+                    <h3 align="center"><a href="assets/img/MaraFinkelResume.pdf" target="_blank">Resume</a></h3>
                 </div>
             </section>
             <hr class="m-0" />
@@ -163,7 +162,7 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
                     <br/>
                     <p class="mb-0">In addition to this, I am an experienced Operations Trainer, activist, and educator with a demonstrated history of working in the alternative medicine industry while complying with the complex and disparate regulations applicable to the cannabis industry.</p>
                     <br />
-                    <h3 align="center"><a href="assets/img/MaraFinkelResume.pdf">Resume</a></h3>
+                    <h3 align="center"><a href="assets/img/MaraFinkelResume.pdf" target="_blank">Resume</a></h3>
                 </div>
             </section>
             <hr class="m-0" />
@@ -172,7 +171,7 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
                     <ul class="fa-ul mb-0">
-                        <a href="https://the-greenmarket.herokuapp.com/">Live</a> | <a href="https://github.com/internetmara/GreenMarket">GitHub</a>
+                        <a href="https://the-greenmarket.herokuapp.com/" target="_blank">Live</a> | <a href="https://github.com/internetmara/GreenMarket" target="_blank">GitHub</a>
                         <h3>Green Market</h3>
                         <h6>Mongo DB, Express, React.js, Redux.js, Node, Webpack, Amazon AWS S3, Google Maps API</h6>
                         <i>An online directory that allows users to browse, purchase and locate local goods and services.</i>
@@ -194,7 +193,7 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
                         <div class="line"/>
 
                         <br/>
-                        <a href="https://hash-maps.herokuapp.com/#/">Live</a> | <a href="https://github.com/internetmara/HashMaps">GitHub</a>
+                        <a href="https://hash-maps.herokuapp.com/#/" target="_blank">Live</a> | <a href="https://github.com/internetmara/HashMaps" target="_blank">GitHub</a>
                         <h3>Hash Maps</h3>
                         <h6>Ruby, Rails, React.js/Redux.js, PostgresSQL, Webpack, Amazon AWS S3, Google Maps API</h6>
                         <i>HashMaps, a Weedmaps clone, is an online directory that allows users to browse, purchase and locate cannabis dispensaries and products.</i>
@@ -216,7 +215,7 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
                         <div class="line" />
 
                         <br />
-                        <a href="https://internetmara.github.io/DND/about.html">Live</a> | <a href="https://github.com/internetmara/DND">GitHub</a>
+                        <a href="https://internetmara.github.io/DND/about.html" target="_blank">Live</a> | <a href="https://github.com/internetmara/DND" target="_blank">GitHub</a>
                         <h3>DND Generator</h3>
                         <h6>JavaScript, Webpack, HTML, CSS</h6>
                         <i>Randomly generates Non-Player Characters (NPCs), environments, monsters to encounter, locations to frequent and magic items for the fantasy tabletop role-playing game Dungeons & Dragons</i>
