--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <meta name="title" property="og:title" content="Mara Finkel Personal Site" />
         <meta property="og:type" content="Website" />
         <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51593100859_ac02b9b424_k.jpg" alt="mara finkel personal site" />
-        <meta name="description" property="og:description" content="I am a Software Engineer with experience building web applications using React, Redux, Javascript, Ruby on Rails, AWS, Node.js, Express.js, MongoDB, and SQL.
+        <meta name="description" property="og:description" content="I am a Software Engineer with experience building web applications using React, Javascript, Ruby on Rails, AWS, Node.js, Express.js, and SQL.
 
-I have recently finished my curriculum at App Academy, a highly selective and immersive Software Engineering Bootcamp in San Francisco, where I spent 100+ hour weeks learning and developing my skills.
+I am currently employed as a software engineer at GreatSchools.org, a national non-profit providing information about school quality. Previously, I attended App Academy, a highly selective and immersive Software Engineering Bootcamp in San Francisco, California, where I spent 100+ hour weeks learning and developing my skills.
 
 When I'm not coding, I like to read graphic novels, create art, and play D&D with my friends. I've found passion in coding and I'm currently trying to learn Python outside of the curriculum I learned from App Academy." />
         <meta name="author" content="Mara Finkel" />
@@ -58,15 +58,14 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
                     <div class="subheading mb-5">
                         Alameda, CA · (510) 388-9221 · 
                         <a href="mailto:ms.marafinkel@gmail.com" target="_blank">ms.marafinkel@gmail.com</a> ·
-                        <a href="assets/img/MaraFinkelResume.pdf" target="_blank">Resume</a>
+                        <a href="assets/img/mara_finkel_resume_23.pdf" target="_blank">Resume</a>
                     </div>
-                    <p class="lead mb-5">I am a Software Engineer, beach bum, dog mom, and D&D player with experience in JavaScript, React, MongoDB, ExpressJs, Ruby, HTML & CSS, and Rails.</p>
+                    <p class="lead mb-5">I am a Software Engineer, beach afficionado, dog mom, and D&D player with experience in JavaScript, React, MongoDB, ExpressJs, Ruby, HTML & CSS, and Rails.</p>
                     
                     <br />
                     <div class="social-icons">
                         <a class="social-icon" href="http://www.linkedin.com/in/marafinkel" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/internetmara" target="_blank"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://angel.co/u/mara-finkel" target="_blank"><i class="fab fa-angellist"></i></a>
                     </div>
                 </div>
             </section>
@@ -93,11 +92,6 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
                         <li class="list-inline-item"><i class="devicon-jquery-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-github-original"></i></li>
                         <li class="list-inline-item"><i class="devicon-heroku-original"></i></li>
-                        <li class="list-inline-item"><i class="devicon-canva-original"></i></li>
-                        <li class="list-inline-item"><i class="devicon-jasmine-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-slack-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-vscode-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-chrome-plain"></i></li>
                         <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                     </ul>                    
@@ -108,6 +102,20 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Full Stack Software Engineer | January 2022 - Present</h3>
+                            <div class="subheading mb-3">GreatSchools, Inc., Oakland, CA</div>
+                            <ul>
+                                <li>Lead the redesign of the home page and profile pages, using ERB as well as reusable react components</li>
+                                <li>Implemented precision data tracking using Freshpaint, scaled to our 49 million unique visitors</li>
+                                <li>Collaborated with a team of 5 engineers to create new features in both English and Spanish, including location-based
+                                search tools using the Google Maps API and SOLR</li>
+                                <li>Wrote scripts and created documentation for processes including data loads and custom email signup pages</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2019 - Present</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Instructor - Dispensary Operations & Patient Navigation Courses</h3>
@@ -134,7 +142,7 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2018 - January 2020</span></div>
                     </div>
-                    <h3 align="center"><a href="assets/img/MaraFinkelResume.pdf" target="_blank">Resume</a></h3>
+                    <h3 align="center"><a href="assets/img/mara_finkel_resume_23.pdf" target="_blank">Resume Download</a></h3>
                 </div>
             </section>
             <hr class="m-0" />
@@ -157,12 +165,12 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a software engineer, I spend most of my time with my dog, Jellybean. I enjoy painting watercolors, reading graphic novels from the library, and cooking the veggies I grow in my garden.</p>
+                    <p>Apart from being a software engineer, I spend most of my time with my dog, Jellybean. I enjoy walking to the beach, painting with watercolors, reading graphic novels from the library, cozy games, and cooking veggies from my garden.</p>
                     <img class="jellypic" src="assets/img/jelly.png"/>
                     <br/>
-                    <p class="mb-0">In addition to this, I am an experienced Operations Trainer, activist, and educator with a demonstrated history of working in the alternative medicine industry while complying with the complex and disparate regulations applicable to the cannabis industry.</p>
+                    <p class="mb-0">In addition to this, I am an experienced Operations Trainer, activist, and educator with a demonstrated history of working in the medical cannabis industry.</p>
                     <br />
-                    <h3 align="center"><a href="assets/img/MaraFinkelResume.pdf" target="_blank">Resume</a></h3>
+                    <h3 align="center"><a href="assets/img/mara_finkel_resume_23.pdf" target="_blank">Resume Download</a></h3>
                 </div>
             </section>
             <hr class="m-0" />
@@ -170,24 +178,17 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
             <section class="resume-section" id="projects">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
-                    <ul class="fa-ul mb-0">
-                        <a href="https://the-greenmarket.herokuapp.com/" target="_blank">Live</a> | <a href="https://github.com/internetmara/GreenMarket" target="_blank">GitHub</a>
-                        <h3>Green Market</h3>
-                        <h6>Mongo DB, Express, React.js, Redux.js, Node, Webpack, Amazon AWS S3, Google Maps API</h6>
-                        <i>An online directory that allows users to browse, purchase and locate local goods and services.</i>
-                        <br/>
-                        <br/>
+                    <div>
+                        <a href="" target="_blank">Live</a> | <a href="https://github.com/internetmara/chatjelpt" target="_blank">GitHub</a>
+                        <h3>Chat Jel-PT</h3>
+                        <h6>Javascript, React.js, OpenAI API</h6>
+                        <i>A clone of Chat GPT except every response mentions my shih tzu, Jellybean.</i>
                         <div class="proj">
-                            <ul>
-                                <br/>
-                                <br/>
-                                <li>Products and services appear on an interactive map of nodes</li>
-                                <br/>
-                                <li>User's products & services data are saved to the database</li>
-                                <br/>
-                                <li>Offers a show page with information about a sellers’ products and/or services</li>
-                            </ul>
-                            <img class="demo-pic" src="assets/img/greenmarket.png"/>
+                            <div class="proj-deets">
+                                <li>Incorporated the OpenAI API platform to allow users to query the ChatGPT AI</li>
+                                <li>Modified the system content to provide customized AI responses</li>
+                            </div>
+                            <img class="demo-pic" src="assets/img/chatjelpt.png"/>
                         </div>
                         <br/>
                         <div class="line"/>
@@ -197,18 +198,12 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
                         <h3>Hash Maps</h3>
                         <h6>Ruby, Rails, React.js/Redux.js, PostgresSQL, Webpack, Amazon AWS S3, Google Maps API</h6>
                         <i>HashMaps, a Weedmaps clone, is an online directory that allows users to browse, purchase and locate cannabis dispensaries and products.</i>
-                        <br />
-                        <br/>
                         <div class="proj">
-                            <ul>
-                                <br/>
-                                <br/>
+                            <div class="proj-deets">
                                 <li>Maps the location of local dispensaries using the Google Maps API platform</li>
-                                <br/>
                                 <li>Allows the user to view products and dispensaries</li>
-                                <br/>
                                 <li>Users can add items to a cart</li>
-                            </ul>
+                            </div>
                             <img class="demo-pic" src="assets/img/hashmaps.png"/>
                         </div>
                         <br/>
@@ -222,18 +217,15 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
                         <br />
                         <br/>
                         <div class="proj">
-                            <ul>
-                                <br/>
-                                <br/>
+                            <div class="proj-deets">
                                 <li>Pulls from an API to provide statistics and information on Monsters and Magic Items</li>
-                                <br/>
                                 <li>Allows the user to choose a category and environment to randomly generate</li>
-                            </ul>
+                            </div>
                             <img class="demo-pic" src="assets/img/dnd.png"/>
                         </div>
                         <br />
                         <div class="line" />
-                    </ul>
+                    </div>
                 </div>
             </section>
         </div>
