--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ When I'm not coding, I like to read graphic novels, create art, and play D&D wit
                         <div class="proj">
                             <div class="proj-deets">
                                 <li>Pulls from an API to provide statistics and information on Monsters and Magic Items</li>
-                                <li>Allows the user to choose a category and environment to randomly generate</li>
+                                <li>Allows the user to choose a category and environment to randomly generate elements via DOM manipulation as well as event handlers and listeners</li>
                             </div>
                             <img class="demo-pic" src="assets/img/dnd.png"/>
                         </div>
